--- a/src/components/heroSection.css
+++ b/src/components/heroSection.css
@@ -44,11 +44,12 @@
 
 .hero button {
     padding: 10px 20px;
-    background-color: #ff4500;
+    background-color: #f0c47b;
     border: none;
     color: white;
     cursor: pointer;
     font-size: 1em;
+    color: black
 }
 
 .header {
